tests/error/array_failure.gw
#! [contains] NegativeArraySize
var int i[2][-1];
